<resources>
    <string name="app_name">MyCarRepairLog</string>
    <string name="btnAdd">+</string>
    <string name="btnAddCar">Add Car</string>
    <string name="btnListCars">List Cars</string>
    <string name="txtAuto">Auto</string>
    <string name="txtViewChassis">Chassis</string>
    <string name="txtViewLicense">License</string>
    <string name="txtViewInsurance">Insurance</string>
    <string name="editTextKilometers">Kilometers</string>
    <string name="editTextDate">Date</string>
    <string name="txtTitle">Log Record</string>
    <string name="editTextDetail">Detail of Work</string>
    <string name="menu_add">Add Car</string>
    <string name="menu_settings">Settings</string>
    <string name="txtviewRecordId">Record ID</string>
    <string name="editTxtCarBrand">Car Brand</string>
    <string name="editTxtCarModel">Car Model</string>
    <string name="editTxtCarYear">Car Year</string>
    <string name="editTxtLastKilometers">Last Kilometers</string>
    <string name="editTxtLastMaintenanceDate">Last Date</string>
    <string name="txtViewNextDate">Next Date</string>
    <string name="txtViewNextKilometers">Next Kilometers</string>
    <string name="listRecords">Records List</string>
    <string name="btnAddRecord">Add Record</string>
    <string name="btnInsertCar">Insert</string>
    <string name="btnUpdateCar">Update</string>
    <string name="txtViewID">Record ID</string>
    <string name="ivEdit">Edit</string>
    <string name="ivAddLog">Add Log</string>
    <string name="ibtnEditRecord">Edit Record</string>
    <string name="ibtnSaveRecord">Save Record</string>
    <string name="editRecordTitle">EDIT RECORD</string>
</resources>